# 8080Emulator

./: .clang-format  .clang-tidy  .gitignore  8080Emulator.sln  8080Emulator.vcxproj  8080Emulator.vcxproj.filters  CMakeLists.txt  README.md  asm.h  cpu.cpp  cpu.h
Tests/: Tests.vcxproj  Tests.vcxproj.filters  extended_device.h  main.cpp
i8080cpu/: i8080cpu.vcxproj  i8080cpu.vcxproj.filters
i8080cpu/include/: asm.h  bus.h  common.h  cpu.h  device.h
i8080cpu/src/: asm.cpp  cpu.cpp
include/i8080/: asm.h  bus.h  common.h  cpu.h
lib8080/: CMakeLists.txt  asm.cpp  bus.cpp  cpu.cpp
lib8080/include/i8080/: asm.h  bus.h  common.h  cpu.h  device.h
resources/: test8080.txt
src/i8080/: CMakeLists.txt  asm.cpp  bus.cpp  cpu.cpp
src/i8080tests/: CMakeLists.txt  main.cpp
tester/: CMakeLists.txt  main.cpp
