cmake_minimum_required(VERSION 3.22)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(
    i8080emu
    VERSION 1.0
    LANGUAGES CXX
)

set(EXTERNALS ${PROJECT_SOURCE_DIR}/externals)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(${EXTERNALS}/fmt)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib8080)
add_subdirectory(${CMAKE_SOURCE_DIR}/tester)
